# orpheus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  calendar_parser.py  credentials.example.json  default.nix  eme-love.txt  music.csv  music_advent_2022.csv  music_advent_2023.csv  neurodydaktyka.csv  photography.csv  pyproject.toml  requirements.txt  role_config.json  role_config.json.example  role_config.yaml.example  sheetake.py  tools.csv
.github/workflows/: container-image.yaml  container-image.yml
